--- a/ACC_RECOVER/packages.config
+++ b/ACC_RECOVER/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Jint" version="2.11.23" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Qoollo.Turbo" version="2.2.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.6.0" targetFramework="net461" />
